[package]
name = "provenact-agent-kit"
version = "0.1.0-alpha.1"
edition = "2024"
license = "Apache-2.0"
description = "Thin agent-facing adapters for Provenact SDK execution flows"
repository = "https://github.com/opertus-systems/provenact-agent-kit"

[dependencies]
provenact-sdk = { path = "../provenact-sdk" }

[dev-dependencies]
sha2 = "0.10"
tempfile = "3"
